--- a/index.html
+++ b/index.html
@@ -5,16 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>SALMON COOKIES
+        </h1>
+        <nav><ul>
+            <li><a href="sales.html">OUR SALES</a></li>
+        </ul></nav>
+    </header>
     <main>
-        <div id="container"></div>
-        <div id="container1"></div>
-        <div id="container2"></div>
-        <div id="container3"></div>
-        <div id="container4"></div>
+        <h3>working hours : from 6am to 7pm <br>
+            Our locations: Seattle, Dubai, Tokyo, Lami, Paris
+        </h3>
+        <div>
+        <img src="photos/chinook.jpg" alt="">
+        <img src="photos/cutter.jpeg" alt="">
+        <img src="photos/shirt.jpg" alt="">
+        </div>
+        <div>
+        <img src="photos/family.jpg" alt="">
+        <img src="photos/fish.jpg" alt="">
+        </div>
+        <div>
+        <img src="photos/frosted-cookie.jpg" alt="">
+        <img src="photos/salmon.png" alt="">
+        </div>
+    </div>
     </main>
     <footer>
          
