--- a/sales.html
+++ b/sales.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header></header>
+    <main>
+        <div id="container"></div>
+        <div id="container1"></div>
+        <div id="container2"></div>
+        <div id="container3"></div>
+        <div id="container4"></div>
+    </main>
+    <footer></footer>
 </body>
-<script> src="app.js" </script>
+<script src="app.js">  </script>
 </html>
