--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,100&display=swap');
+        </style>
 </head>
 <body>
     <header>
